Fix alignment on deploy page

--- a/src/app/frontend/deploy/helpsection/helpsection.scss
+++ b/src/app/frontend/deploy/helpsection/helpsection.scss
@@ -19,10 +19,9 @@
   flex: 1;
   flex-basis: auto;
   margin: $baseline-grid 0;
-  padding-right: 4 * $baseline-grid;
   width: 100%;
 
   &:last-child {
-    padding-right: 0;
+    padding-left: 4 * $baseline-grid;
   }
 }
